// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`to-satisfy when it is a subtree fails when the actual does not the expected 1`] = `
"expected
<User>
  <div className=\\"user\\">
    <h3 id=\\"name\\">Harriet</h3>
    <div id=\\"child\\">Foo</div>
  </div>
</User>
to satisfy <div className=\\"user\\"><h3 id=\\"name\\">Harriet</h3><div id=\\"child\\">Children</div></div>

<div className=\\"user\\">
  <h3 id=\\"name\\">Harriet</h3>
  <div id=\\"child\\">
    Foo // -Foo
        // +Children
  </div>
</div>"
`;

exports[`to-satisfy when it is a subtree fails when the actual not matching the expected type 1`] = `
"expected
<User>
  <div className=\\"user\\">
    <h3 id=\\"name\\">Harriet</h3>
    <div id=\\"child\\">Foo</div>
  </div>
</User>
to satisfy <h3>Header</h3>

<div // should be <h3
   className=\\"user\\">
  <h3 id=\\"name\\"> // wrapper should be removed
    Harriet // -Harriet
            // +Header
  </h3> // wrapper should be removed
  <div id=\\"child\\">Foo</div>
</div>"
`;

exports[`to-satisfy with the exhaustively flag fails when the actual does not match the expected 1`] = `
"expected
<User>
  <div className=\\"user\\">
    <h3 id=\\"name\\">Harriet</h3>
    <div id=\\"child\\">Children</div>
  </div>
</User>
to exhaustively satisfy <div id=\\"kids\\">Kids</div>

<div className=\\"user\\" // className should be removed
   // missing id=\\"kids\\"
>
  <h3 id=\\"name\\"> // wrapper should be removed
    Harriet // -Harriet
            // +Kids
  </h3> // wrapper should be removed
  <div id=\\"child\\">Children</div> // should be removed
</div>"
`;

exports[`to-satisfy with the exhaustively flag when negated fails when actual is equal the expected 1`] = `
"expected
<User>
  <div className=\\"user\\">
    <h3 id=\\"name\\">Harriet</h3>
    <div id=\\"child\\">Children</div>
  </div>
</User>
not to exhaustively satisfy <div className=\\"user\\"><h3 id=\\"name\\">Harriet</h3><div id=\\"child\\">Children</div></div>"
`;
